re PR c++/56388 (catch(...) in lambda rejected)

PR c++/56388
	* semantics.c (insert_capture_proxy): Just use index 1 in the
	stmt_list_stack.

From-SVN: r198010